<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature_posts.presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_preferred_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_preferred_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_bar_height"
            android:background="@color/grey"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_preferred_list_toolbar_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/toolbar_preferred_players"
                android:textColor="@color/text_black"
                android:textSize="@dimen/search_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_preferred_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/cl_preferred_list_toolbar">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_preferred_list_header_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/preferred_header_player"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/item_header_label_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_preferred_list_header_pg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_preferred_list_header_pg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/preferred_header_pg"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/item_header_label_text_size"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_preferred_list_header_mv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="@dimen/item_stat_width" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_preferred_list_header_mv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/preferred_header_mv"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/item_header_label_text_size"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_preferred_list_header_mfv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="@dimen/item_stat_width" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_preferred_list_header_mfv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/preferred_header_mfv"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/item_header_label_text_size"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="@dimen/item_stat_width" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_preferred_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_preferred_list_header"
            tools:itemCount="3"
            tools:listitem="@layout/item_preferred_list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_preferred_list_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_preferred_list_toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>